# rota-lb

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: backend.rs  balancer.rs  constants.rs  discovery.rs  error.rs  factory.rs  ffi.rs  health.rs  lib.rs  retry.rs  strategies.rs  strategy.rs  tls.rs  tower.rs  tunnel.rs
src/configs/: mod.rs  tls.rs
src/constants/: general.rs  health.rs  mod.rs  retry.rs  strategy.rs
src/enums/: error.rs  ffi.rs  health.rs  mod.rs  tls.rs
src/errors/: backend_error.rs  error.rs  factory_error.rs  invalid_address.rs  io_error.rs  mod.rs  no_backends.rs
src/ffi/: api.rs  mod.rs  strategy.rs  tests.rs  types.rs
src/services/: balancer.rs
src/strategies/: failover.rs  hash_by_addr.rs  health_weighted.rs  least_connections.rs  lowest_rtt.rs  mod.rs  random.rs  round_robin.rs  sticky.rs  weighted_round_robin.rs
src/traits/: mod.rs
src/utils/: discovery.rs  factory.rs  health.rs  mod.rs  retry.rs
tests/: balancer_coverage_tests.rs  balancer_deep_tests.rs  balancer_final_tests.rs  balancer_full_dial_tests.rs  balancer_push_90_tests.rs  comprehensive_integration_tests.rs  data_feed_user.rs  dial_timeout_tests.rs  discovery_more_tests.rs  discovery_tests.rs  dynamic_reconfig_tests.rs  error_tests.rs  factory_coverage_tests.rs  factory_more_tests.rs  factory_tests.rs  health_tests.rs  integration_tests.rs  more_balancer_tests.rs  more_retry_tests.rs  proptest_strategies.rs  retry_tests.rs  strategy_coverage_tests.rs  strategy_more_tests.rs  strategy_tests.rs  tls_coverage_tests.rs  tls_final_tests.rs  tls_full_tests.rs  tls_tests.rs  tower_coverage_tests.rs  tower_tests.rs
tests/common/: mod.rs
