[package]
name = "rota-lb"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Generic load balancer over a pool of backends. Distribute outbound traffic across N parallel connections with pluggable strategies (round-robin, lowest-RTT, least-connections, hash-by-addr, weighted, failover, sticky, health-weighted)."
repository = "https://github.com/shregar1/rota-lb"
readme = "README.md"
keywords = ["load-balancing", "balancer", "networking", "async", "pool"]
categories = ["network-programming", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
bench = []
tower = ["dep:tower", "dep:tower-service"]
tls = ["dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls", "dep:rustls-native-certs"]
discovery = ["dep:serde", "dep:serde_json", "dep:serde_yaml", "dep:toml"]
dns = ["dep:trust-dns-resolver"]
consul = ["dep:consulrs"]
etcd = ["dep:etcd-client"]
ffi = []

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "io-util", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
tower = { version = "0.4", features = ["util"], optional = true }
tower-service = { version = "0.3", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
consulrs = { version = "0.1", optional = true }
etcd-client = { version = "0.10", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "strategies"
harness = false